--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,38 +1,43 @@
-name: iOS CI
+name: iOS Build and Test
 
 on:
   push:
-    branches: [ main ]
+    branches:
+      - main
   pull_request:
-    branches: [ main ]
+    branches:
+      - main
 
 jobs:
-  build:
+  build-and-test:
     runs-on: macos-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
+      - name: Checkout repository
+        uses: actions/checkout@v2
 
-    - name: Set up Ruby
-      uses: ruby/setup-ruby@v1
-      with:
-        ruby-version: 2.7
+      - name: Set up Xcode
+        run: sudo xcode-select -s /Applications/Xcode_15.app # Update this path to match your Xcode installation
 
-    - name: Set up fastlane
-      run: |
-        gem install fastlane
+      - name: Install dependencies
+        run: bundle install # If using Bundler for dependencies
 
-    - name: Install dependencies
-      run: |
-        bundle install
-        xcodebuild -version
+      - name: Install CocoaPods
+        run: pod install # If using CocoaPods
 
-    - name: Build
-      run: |
-        xcodebuild -scheme EPCollaboratif -project EPCollaboratif.xcodeproj -configuration Debug clean build CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO
+      - name: Clean and build the project
+        run: |
+          xcodebuild clean build \
+          -project EPCollaboratif.xcodeproj \
+          -scheme EPCollaboratif \
+          -configuration Debug \
+          CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO
 
-    - name: Tests
-      run: |
-        xcodebuild -scheme EPCollaboratif -project EPCollaboratif.xcodeproj -configuration Debug test CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO
-
+      - name: Run tests
+        run: |
+          xcodebuild test \
+          -project EPCollaboratif.xcodeproj \
+          -scheme EPCollaboratif \
+          -configuration Debug \
+          -destination 'platform=iOS Simulator,name=iPhone 14' \
+          CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO
