--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,28 +16,14 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
 
-      - name: Set up Xcode
-        run: sudo xcode-select -s /Applications/Xcode_15.app # Update this path to match your Xcode installation
-
-      - name: Install dependencies
-        run: bundle install # If using Bundler for dependencies
-
       - name: Install CocoaPods
         run: pod install # If using CocoaPods
 
-      - name: Clean and build the project
-        run: |
-          xcodebuild clean build \
-          -project EPCollaboratif.xcodeproj \
-          -scheme EPCollaboratif \
-          -configuration Debug \
-          CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO
-
-      - name: Run tests
-        run: |
-          xcodebuild test \
-          -project EPCollaboratif.xcodeproj \
-          -scheme EPCollaboratif \
-          -configuration Debug \
-          -destination 'platform=iOS Simulator,name=iPhone 14' \
-          CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO
+      - name: Build and Test
+        uses: sersoft-gmbh/xcodebuild-action@v3.2.0
+        with:
+          project: EPCollaboratif.xcodeproj
+          scheme: EPCollaboratif
+          destination: 'platform=iOS Simulator,name=iPhone 14'
+          action: test
+          build-settings: 'CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO'
