--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,3 +24,16 @@ jobs:
           destination: 'platform=iOS Simulator,name=iPhone 14'
           action: test
           build-settings: 'CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO'
+          output-directory: './build'
+
+      - name: Process Test Results
+        uses: tib/xcresulttool@v1.0.0
+        with:
+          xcresult-path: './build/Test.xcresult'
+          output: 'test-results'
+
+      - name: Upload Test Results
+        uses: actions/upload-artifact@v3
+        with:
+          name: test-results
+          path: test-results
