--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,16 +24,25 @@ jobs:
           destination: 'platform=iOS Simulator,name=iPhone 14'
           action: test
           build-settings: 'CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO'
+
+      - name: Build and Test
+        uses: sersoft-gmbh/xcodebuild-action@v3.2.0
+        with:
+          project: EPCollaboratif.xcodeproj
+          scheme: EPCollaboratif
+          destination: 'platform=iOS Simulator,name=iPhone 14'
+          action: test
+          build-settings: 'CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO'
           output-directory: './build'
 
       - name: Process Test Results
-        uses: tib/xcresulttool@v1.0.0
+        uses: kishikawakatsumi/xcresulttool@v1
         with:
           xcresult-path: './build/Test.xcresult'
           output: 'test-results'
 
       - name: Upload Test Results
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: test-results
           path: test-results
