--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,11 +24,7 @@ jobs:
           destination: 'platform=iOS Simulator,name=iPhone 14'
           action: test
           build-settings: 'CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO'
-          output-directory: './build'
-
-      - name: Run Tests
-        run: |
-          xcodebuild -scheme EPCollaboratif -project EPCollaboratif.xcodeproj -resultBundlePath TestResults test -destination 'platform=iOS Simulator,name=iPhone 14' CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO
+          output-directory: 'TestResults'
 
       - name: Process Test Results
         - uses: kishikawakatsumi/xcresulttool@v1
