--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,3 @@
-
 name: iOS Build and Test
 
 on:
@@ -10,27 +9,21 @@ jobs:
   build-and-test:
     runs-on: macos-latest
 
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3  # Mise à jour vers v3
-
-      - name: Build and Test
-        uses: sersoft-gmbh/xcodebuild-action@v3.2.0
+  steps:
+  
+    - name: Checkout repository
+        uses: actions/checkout@v2
+    - name: Build and Test
+                uses: sersoft-gmbh/xcodebuild-action@v3.2.0
         with:
-          project: EPCollaboratif.xcodeproj
-          scheme: EPCollaboratif
-          destination: 'platform=iOS Simulator,name=iPhone 14'
-          action: test
-          result-bundle-path: 'TestResults/TestResults.xcresult'
-
-      - name: Process Test Results
-        uses: kishikawakatsumi/xcresulttool@v2  # Mise à jour si v2 est disponible
+               project: EPCollaboratif.xcodeproj
+               scheme: EPCollaboratif
+               destination: 'platform=iOS Simulator,name=iPhone 14'
+               action: test
+               result-bundle-path: 'TestResults/TestResults.xcresult'
+               - name: Process Test Results
+        uses: kishikawakatsumi/xcresulttool@v1
+        
         with:
           path: TestResults/TestResults.xcresult
         if: success() || failure()
-
-      - name: Upload Test Results
-        uses: actions/upload-artifact@v4  # Ajout de l'action v4 pour le téléchargement des résultats (si nécessaire)
-        with:
-          name: TestResults
-          path: TestResults/TestResults.xcresult
