--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,6 +13,10 @@ jobs:
   
     - name: Checkout repository
         uses: actions/checkout@v2
+                     
+    - name: Load Xcode version
+                uses: AckeeCZ/load-xcode-version@1.0.1
+            
     - name: Build and Test
                 uses: sersoft-gmbh/xcodebuild-action@v3.2.0
         with:
@@ -27,3 +31,4 @@ jobs:
         with:
           path: TestResults/TestResults.xcresult
         if: success() || failure()
+
