--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,26 +9,30 @@ jobs:
   build-and-test:
     runs-on: macos-latest
 
-  steps:
-  
+    steps:
+    # Vérifier le code source
     - name: Checkout repository
-        uses: actions/checkout@v2
-                     
-    - name: Load Xcode version
-                uses: AckeeCZ/load-xcode-version@1.0.1
-            
-    - name: Build and Test
-                uses: sersoft-gmbh/xcodebuild-action@v3.2.0
-        with:
-               project: EPCollaboratif.xcodeproj
-               scheme: EPCollaboratif
-               destination: 'platform=iOS Simulator,name=iPhone 14'
-               action: test
-               result-bundle-path: 'TestResults/TestResults.xcresult'
-               - name: Process Test Results
-        uses: kishikawakatsumi/xcresulttool@v1
-        
-        with:
-          path: TestResults/TestResults.xcresult
-        if: success() || failure()
+      uses: actions/checkout@v2
 
+    # Charger la version d'Xcode (ajouté si nécessaire)
+    - name: Load Xcode version
+      uses: AckeeCZ/load-xcode-version@1.0.1
+      with:
+        version: '14.0'  # Remplacez par la version d'Xcode que vous souhaitez utiliser
+
+    # Build et Test avec Xcode
+    - name: Build and Test
+      uses: sersoft-gmbh/xcodebuild-action@v3.2.0
+      with:
+        project: EPCollaboratif.xcodeproj
+        scheme: EPCollaboratif
+        destination: 'platform=iOS Simulator,name=iPhone 14'
+        action: test
+        result-bundle-path: 'TestResults/TestResults.xcresult'
+
+    # Traiter les résultats des tests
+    - name: Process Test Results
+      uses: kishikawakatsumi/xcresulttool@v1
+      with:
+        path: TestResults/TestResults.xcresult
+      if: success() || failure()
